--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ asgiref==3.8.1
 attrs==25.3.0
 certifi==2025.4.26
 charset-normalizer==3.4.2
+contourpy==1.3.2
+cycler==0.12.1
 dataclasses-json==0.6.7
 distro==1.9.0
 Django==5.2.1
@@ -15,6 +17,7 @@ djangorestframework_simplejwt==5.5.0
 dotenv==0.9.9
 et_xmlfile==2.0.0
 faiss-cpu==1.11.0
+fonttools==4.58.0
 frozenlist==1.6.0
 h11==0.16.0
 httpcore==1.0.9
@@ -24,6 +27,7 @@ idna==3.10
 jiter==0.9.0
 jsonpatch==1.33
 jsonpointer==3.0.0
+kiwisolver==1.4.8
 langchain==0.3.25
 langchain-community==0.3.24
 langchain-core==0.3.60
@@ -31,6 +35,7 @@ langchain-openai==0.3.17
 langchain-text-splitters==0.3.8
 langsmith==0.3.42
 marshmallow==3.26.1
+matplotlib==3.10.3
 multidict==6.4.3
 mypy_extensions==1.1.0
 numpy==2.2.6
@@ -39,11 +44,13 @@ openpyxl==3.1.5
 orjson==3.10.18
 packaging==24.2
 pandas==2.2.3
+pillow==11.2.1
 propcache==0.3.1
 pydantic==2.11.4
 pydantic-settings==2.9.1
 pydantic_core==2.33.2
 PyJWT==2.9.0
+pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 pytz==2025.2
